Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- updated Brazilian Portuguese translations (Thanks to Mario Olimpio de Menezes
  <mario [at] curiango.ipen.br>)
- added invisible Text Templets with <div id="content"/> and <div id="menu"/>
  for accesskeys targets in CPS3-Default theme.
Bug fixes:
~~~~~~~~~~
- PortalBoxGroup render method crashed translating the box title if string
  could no be encoded in iso-8859-15.
- #1026 added missing utool declaration.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-
